--- a/index.html
+++ b/index.html
@@ -77,33 +77,33 @@
                 <div class="col-md-3 col-xs-6 text-center">
                     <div class="service-item">
                         <div class="service-icon">
-                            <i class="fa fa-video-camera"></i>
+                            <i class="fa fa-code" style="font-size: 170%;"></i>
                         </div>
-                        <h3 class="service-title">Optimised and Eficient</h3>
+                        <h3 class="service-title">Deep learning Projects in Tensorflow</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-6 text-center">
                     <div class="service-item">
                         <div class="service-icon">
-                            <i class="fa fa-desktop"></i>
+                            <i class="fa fa-book" style="font-size: 170%;"></i>
                         </div>
-                        <h3 class="service-title">CLEAN AND MINIMAL</h3>
+                        <h3 class="service-title">Clean and Documented Codebase</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-6 text-center">
                     <div class="service-item">
                         <div class="service-icon">
-                            <i class="fa fa-headphones"></i>
+                            <i class="fa fa-eye-slash" style="font-size: 170%;"></i>
                         </div>
-                        <h3 class="service-title">Best accuracies guaranteed</h3>
+                        <h3 class="service-title">Student Confidential Projects</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-6 text-center">
                     <div class="service-item">
                         <div class="service-icon">
-                            <i class="fa fa-support"></i>
+                            <i class="fa fa-support" style="font-size: 170%;"></i>
                         </div>
-                        <h3 class="service-title">Confidentiality Support</h3>
+                        <h3 class="service-title">Lifetime Support for your projects</h3>
                     </div>
                 </div>
             </div>
