--- a/index.html
+++ b/index.html
@@ -243,24 +243,8 @@
                    </ul>
                </div>
                <div class="col-md-7">
-                    <div class="row">
-                        <form class="contact-form" action="#" method="post">
-                           <fieldset class="col-md-6">
-                               <input type="text" name="name" placeholder="Name...">
-                           </fieldset>
-                           <fieldset class="col-md-6">
-                               <input type="email" name="email" placeholder="Email...">
-                           </fieldset>
-                           <fieldset class="col-md-12">
-                               <input type="text" name="subject" placeholder="Subject...">
-                           </fieldset>
-                           <fieldset class="col-md-12">
-                               <textarea name="message" id="message" cols="30" rows="5" placeholder="Message..."></textarea>
-                           </fieldset>
-                           <fieldset class="col-md-12">
-                               <input type="submit" value="Send Message" class="main-button">
-                           </fieldset>
-                        </form>
+                    <div class="row pull-right">
+                        <img src="images/footer-logo.png" width="100%" height="20%" alt="BurgerAI">
                     </div>
                </div>
             </div>
