Added agreement para

--- a/index.html
+++ b/index.html
@@ -205,22 +205,14 @@
     <div id="video" class="video-feature content-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 section-header">
-                    <h1 class="section-title" style="color:white; font-size: 300%; margin-left: 38%;">AGREEMENTS</h1>
+                <div class="col-md-12 section-header text-center">
+                    <b><h2 class="section-title" style="color:white; font-size: 300%;">AGREEMENTS</h2></b>
                 </div>
-                <div class="col-md-6">                    
+                <div class="col-md-12 text-center">                    
                     <div class="product-content col-md-12 col-xs-12">
-                        <h1 style="color:white;">Students Confidentiality Agreement</h1>	
-                        <span style="font-size: 150%;">NA</span>
+                        <h2 style="color:white;">We provide two types of non-disclosure agreements under the Student's Agreement and General Agreement respectively. This helps you to be assured that your identity remains safe and BurgerAI would never voluntarily give information regarding it's clients unless it has something to do with national security or aliens. For complete details, contact us.<br><span style="color:red"><b>Warning** </b></span>(Includes official paperwork that your dad will understand)</h2>
                         <br><br><br><br>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="product-content col-md-12 col-xs-12">
-                        <h1 style="color:white;">General Confideniality Agreement</h1>	
-                        <span style="font-size: 150%; color:#663399;">NA</span>
-                        <br><br><br><br>
-                        </div>
                 </div>
             </div>
         </div>
@@ -229,8 +221,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center section-header">
-                    <h2 class="section-title">Contact Me</h2>
-                    <p style="font-size: 130%;">Doing your own projects is always encouraged and is the right thing to do. But if doing that seems unrealistic and too boring, leave me a message :)</p>
+                    <h2 class="section-title">Contact Us</h2>
+                    <p style="font-size: 130%;">Doing your own projects is always encouraged and is the right thing to do. But if doing that seems unrealistic and too boring, leave us a message :)</p>
                 </div>
             </div>
             <div class="row">
@@ -238,7 +230,7 @@
                    <p>The pricing of projects is purely based on the difficulty and required efforts and is not related to number of hours whatsoever. However, if you need something at a shorter notice, the prices will vary. Coz I'm a human too!</p>
                    <ul>
                        <li><i class="fa fa-phone"></i> +91-7972737502</li>
-                       <li><i class="fa fa-map-marker"></i> Why do you need my mailing address?</li>
+                       <li><i class="fa fa-map-marker"></i> Why do you need mailing address anyway?</li>
                        <li><i class="fa fa-envelope"></i> <a href="mailto:info@company.com">nimish1512@gmail.com</a></li>
                    </ul>
                </div>
