Added agreement para

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             </div>
             <div class="row">
                <div class="col-md-5 contact-info">
-                   <p>The pricing of projects is purely based on the difficulty and required efforts and is not related to number of hours whatsoever. However, if you need something at a shorter notice, the prices will vary. Coz I'm a human too!</p>
+                   <p>The pricing of projects is purely based on the difficulty and required efforts and is not related to number of hours whatsoever. However, if you need something at a shorter notice, the prices will vary. Coz we are human too!</p>
                    <ul>
                        <li><i class="fa fa-phone"></i> +91-7972737502</li>
                        <li><i class="fa fa-map-marker"></i> Why do you need mailing address anyway?</li>
