Added agreement para

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <ul class="menu-holder">
             <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
             <li><a href="#services"><i class="fa fa-cogs"></i>Services</a></li>
-            <li><a href="#products"><i class="fa fa-list"></i>Products</a></li>
-            <li><a href="#video"><i class="fa fa-list"></i>Video</a></li>
+            <li><a href="#products"><i class="fa fa-list"></i>Projects</a></li>
+            <li><a href="#video"><i class="fa fa-list"></i>Agreement</a></li>
             <li><a href="#contact"><i class="fa fa-envelope"></i>Contact</a></li>
         </ul>
     </div>
