--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="utf-8">
     <title>BurgerAI - Premium AI freelancing </title>
-    <meta name="description" content="AI freelancing by Nimish Ronghe">
+    <meta name="description" content="Perfect AI freelancing by Nimish and Sayali">
+    <meta property="og:title" content="AI Freelancing" />
+    <meta property="og:url" content="http://www.burgerai.xyz"/>
+    <meta property="og:description" content="Get your Deep Learning/Machine Learning projects in no time.">
+    <meta property="og:image" content="images/favicon.ico">
+    <link rel="icon" type="images/favicon.ico" href="http://www.burgerai.xyz">
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="en_GB" />
+	<meta property="og:locale:alternate" content="fr_FR" />
+	<meta property="og:locale:alternate" content="es_ES" />
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
