--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta property="og:title" content="AI Freelancing" />
     <meta property="og:url" content="http://www.burgerai.xyz"/>
     <meta property="og:description" content="Get your Deep Learning/Machine Learning projects in no time.">
-    <meta property="og:image" content="images/favicon.ico">
+    <meta property="og:image" content="https://github.com/nimish1512/BurgerAI/blob/master/images/favicon.ico">
     <link rel="icon" type="images/favicon.ico" href="http://www.burgerai.xyz">
-    <link rel="shortcut icon" href="images/favicon.ico">
-    <link rel="apple-touch-icon image_src" href="images/favicon.ico">
+    <link rel="shortcut icon" href="https://github.com/nimish1512/BurgerAI/blob/master/images/favicon.ico">
+    <link rel="apple-touch-icon image_src" href="https://github.com/nimish1512/BurgerAI/blob/master/images/favicon.ico">
     <meta property="og:type" content="article" />
     <meta property="og:locale" content="en_GB" />
 	<meta property="og:locale:alternate" content="fr_FR" />
