--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                    <ul>
                        <li><i class="fa fa-phone"></i> +91-7972737502</li>
                        <li><i class="fa fa-map-marker"></i> Why do you need mailing address anyway?</li>
-                       <li><i class="fa fa-envelope"></i> <a href="mailto:info@company.com">nimish1512@gmail.com</a></li>
+                       <li><i class="fa fa-envelope"></i> <a href="mailto:burgerai.xyz@gmail.com">burgerai.xyz@gmail.com</a></li>
                    </ul>
                </div>
                <div class="col-md-7">
