Added project backup

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/templatemo_style.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
@@ -112,7 +112,7 @@
                 <div class="col-md-3 col-xs-6 text-center">
                     <div class="service-item">
                         <div class="service-icon">
-                            <i class="fa fa-support" style="font-size: 170%;"></i>
+                            <i class="far fa-life-ring" style="font-size: 170%;"></i>
                         </div>
                         <h3 class="service-title">Lifetime Support for your projects</h3>
                     </div>
@@ -122,6 +122,62 @@
     </div>
     <div class="content-section" id="products">
         <div class="container">
+            <div class="row">
+                <div class="col-md-12 section-header text-center">
+                    <b><h2 class="section-title" style="color:white; font-size: 300%;"><i class="fa fa-file-code"></i> ------ PROJECTS ------ <i class="fas fa-file-code"></i> </h2></b>
+                </div>
+            </div><br><br>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="dropdown">
+                        <button type="button" class="btn btn-primary btn-lg dropdown-toggle" style="background-color:#663399;" data-toggle="dropdown">
+                            Machine Learning
+                        </button>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Text Classification using Ensembled Trees</a>
+                        <a class="dropdown-item" href="#"></a>
+                        <a class="dropdown-item" href="#">Link 3</a>
+                    </div>
+                </div> 
+            </div>
+                <div class="col-md-3">
+                    <div class="dropdown">
+                        <button type="button" class="btn btn-primary btn-lg dropdown-toggle" style="background-color:#663399;" data-toggle="dropdown">
+                            Deep Learning
+                        </button>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Link 1</a>
+                        <a class="dropdown-item" href="#">Link 2</a>
+                        <a class="dropdown-item" href="#">Link 3</a>
+                    </div>
+                </div> 
+            </div>
+                            <div class="col-md-3">
+                    <div class="dropdown">
+                        <button type="button" class="btn btn-primary btn-lg dropdown-toggle" style="background-color:#663399;" data-toggle="dropdown">
+                            Web Development
+                        </button>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Link 1</a>
+                        <a class="dropdown-item" href="#">Link 2</a>
+                        <a class="dropdown-item" href="#">Link 3</a>
+                    </div>
+                </div> 
+            </div>
+                            <div class="col-md-3">
+                    <div class="dropdown">
+                        <button type="button" class="btn btn-primary btn-lg dropdown-toggle" style="background-color:#663399;" data-toggle="dropdown">
+                            Data Science
+                        </button>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Link 1</a>
+                        <a class="dropdown-item" href="#">Link 2</a>
+                        <a class="dropdown-item" href="#">Link 3</a>
+                    </div>
+                </div> 
+            </div>
+            </div>
+            <!---
             <div class="row">
                 <div class="col-md-6">
                     <div class="col-md-5 col-xs-12 text-center">
@@ -210,7 +266,7 @@
                         <br><br><br><br>
                         </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
     <div id="video" class="video-feature content-section">
