added sane features

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <li><i class="fa fa-check"></i><b>Deep Learning models as beautiful as extra cheese</b></li>
                         <li><i class="fa fa-check"></i><b>Strictly <span style="color:#663399;">Python 3</span> codebases to keep your AI crispy</b></li>
                         <li><i class="fa fa-check"></i><b>Tensorflow and Sklearn as fresh raw materials</b></li>
-                        <li><i class="fa fa-check"></i><b>If you are a student, no teacher will ever know</b><b style="color:#663399;">&nbsp;&nbsp; ;)</b></li>
+                        <li><i class="fa fa-check"></i><b>Your privacy is our priority</b><b style="color:#663399;">&nbsp;&nbsp; ;)</b></li>
                     </ul>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                         <div class="service-icon">
                             <i class="fa fa-eye-slash" style="font-size: 170%;"></i>
                         </div>
-                        <h3 class="service-title">Student Confidential Projects</h3>
+                        <h3 class="service-title">Confidential Projects Assistance</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-6 text-center">
@@ -131,48 +131,48 @@
                 <div class="col-md-3">
                     <div class="dropdown">
                         <button type="button" class="btn btn-primary btn-lg dropdown-toggle" style="background-color:#663399;" data-toggle="dropdown">
-                            Machine Learning
+                            Text based
                         </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Text Classification using Ensembled Trees</a>
-                        <a class="dropdown-item" href="#"></a>
-                        <a class="dropdown-item" href="#">Link 3</a>
+                        <a class="dropdown-item" href="#">Text Classification</a>
+                        <a class="dropdown-item" href="#">AI Chatbots</a>
+                        <a class="dropdown-item" href="#">Advance NLP</a>
                     </div>
                 </div> 
             </div>
                 <div class="col-md-3">
                     <div class="dropdown">
                         <button type="button" class="btn btn-primary btn-lg dropdown-toggle" style="background-color:#663399;" data-toggle="dropdown">
-                            Deep Learning
+                            Image Based
                         </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Link 1</a>
-                        <a class="dropdown-item" href="#">Link 2</a>
-                        <a class="dropdown-item" href="#">Link 3</a>
+                        <a class="dropdown-item" href="#">Facial Recognition</a>
+                        <a class="dropdown-item" href="#">Image Segmentation</a>
+                        <a class="dropdown-item" href="#">DeepFakes</a>
                     </div>
                 </div> 
             </div>
                             <div class="col-md-3">
                     <div class="dropdown">
                         <button type="button" class="btn btn-primary btn-lg dropdown-toggle" style="background-color:#663399;" data-toggle="dropdown">
-                            Web Development
+                            Fintech Specials
                         </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Link 1</a>
-                        <a class="dropdown-item" href="#">Link 2</a>
-                        <a class="dropdown-item" href="#">Link 3</a>
+                        <a class="dropdown-item" href="#">Financial risk analysis</a>
+                        <a class="dropdown-item" href="#">Churn rate prediction</a>
+                        <a class="dropdown-item" href="#">Customer analytics</a>
                     </div>
                 </div> 
             </div>
                             <div class="col-md-3">
                     <div class="dropdown">
                         <button type="button" class="btn btn-primary btn-lg dropdown-toggle" style="background-color:#663399;" data-toggle="dropdown">
-                            Data Science
+                            Numeric Based
                         </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Link 1</a>
-                        <a class="dropdown-item" href="#">Link 2</a>
-                        <a class="dropdown-item" href="#">Link 3</a>
+                        <a class="dropdown-item" href="#">Linear & Logistic regression</a>
+                        <a class="dropdown-item" href="#">Population mortality analysis</a>
+                        <a class="dropdown-item" href="#">Reverse problem analytics</a>
                     </div>
                 </div> 
             </div>
