added sane features

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 </div>
                 <div class="col-md-12 text-center">                    
                     <div class="product-content col-md-12 col-xs-12">
-                        <h2 style="color:white; font-size: 140%;">We provide two types of non-disclosure agreements under the Student's Agreement and General Agreement respectively. This helps you to be assured that your identity remains safe and BurgerAI would never voluntarily give information regarding it's clients unless it has something to do with national security or aliens. For complete details, contact us.<br><span style="color:red"><b>Warning** </b></span>(Includes official paperwork that your dad will understand)</h2>
+                        <h2 style="color:white; font-size: 140%;">We provide two types of non-disclosure agreements under the Student's Agreement and General Agreement respectively. This helps you to be assured that your identity remains safe and BurgerAI would never voluntarily give information regarding it's clients unless it has something to do with national security or aliens. For complete details, contact us.<br><span style="color:red"><b>Warning** </b></span>(Includes official paperwork that will bore you)</h2>
                         <br><br><br><br>
                     </div>
                 </div>
