added sane features

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
                             Text based
                         </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Text Classification</a>
-                        <a class="dropdown-item" href="#">AI Chatbots</a>
-                        <a class="dropdown-item" href="#">Advance NLP</a>
+                        <a class="dropdown-item" href="#">Text Classification</a><br>
+                        <a class="dropdown-item" href="#">AI Chatbots</a><br>
+                        <a class="dropdown-item" href="#">Advance NLP</a><br>
                     </div>
                 </div> 
             </div>
@@ -146,9 +146,9 @@
                             Image Based
                         </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Facial Recognition</a>
-                        <a class="dropdown-item" href="#">Image Segmentation</a>
-                        <a class="dropdown-item" href="#">DeepFakes</a>
+                        <a class="dropdown-item" href="#">Facial Recognition</a><br>
+                        <a class="dropdown-item" href="#">Image Segmentation</a><br>
+                        <a class="dropdown-item" href="#">DeepFakes</a><br>
                     </div>
                 </div> 
             </div>
@@ -158,9 +158,9 @@
                             Fintech Specials
                         </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Financial risk analysis</a>
-                        <a class="dropdown-item" href="#">Churn rate prediction</a>
-                        <a class="dropdown-item" href="#">Customer analytics</a>
+                        <a class="dropdown-item" href="#">Financial risk analysis</a><br>
+                        <a class="dropdown-item" href="#">Churn rate prediction</a><br>
+                        <a class="dropdown-item" href="#">Customer analytics</a><br>
                     </div>
                 </div> 
             </div>
@@ -170,103 +170,13 @@
                             Numeric Based
                         </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Linear & Logistic regression</a>
-                        <a class="dropdown-item" href="#">Population mortality analysis</a>
-                        <a class="dropdown-item" href="#">Reverse problem analytics</a>
+                        <a class="dropdown-item" href="#">Linear & Logistic regression</a><br>
+                        <a class="dropdown-item" href="#">Population mortality analysis</a><br>
+                        <a class="dropdown-item" href="#">Reverse problem analytics</a><br>
                     </div>
                 </div> 
             </div>
             </div>
-            <!---
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="col-md-5 col-xs-12 text-center">
-                        <img src="images/product-1.png" alt="">
-                    </div>                    
-                    <div class="product-content col-md-7 col-xs-12">
-                        <h3>Emotion Recognition using Deep Learning</h3>	
-                        <span style="font-size: 150%; color:#663399;">Tensorflow and OpenCV</span>
-                        <br><br><br><br>
-                        </div>
-                </div>
-                <div class="col-md-6">
-                <div class="col-md-5 col-xs-12 text-center">
-                        <img src="images/product-1.png" alt="">
-                    </div>
-                    <div class="product-content col-md-7 col-xs-12">
-                        <h3>Real-time design transofrmation system using DCGAN</h3>	
-                        <span style="font-size: 150%; color:#663399;">Tensorflow and OpenCV</span>
-                        <br><br><br><br>
-                        </div>
-                </div>
-            </div>
-                        <div class="row">
-                <div class="col-md-6">
-                    <div class="col-md-5 col-xs-12 text-center">
-                        <img src="images/product-1.png" alt="">
-                    </div>                    
-                    <div class="product-content col-md-7 col-xs-12">
-                        <h3>Brain Tumor detection using DeepCNN</h3>	
-                        <span style="font-size: 150%; color:#663399;">Tensorflow and OpenCV</span>
-                        <br><br><br><br>
-                        </div>
-                </div>
-                <div class="col-md-6">
-                <div class="col-md-5 col-xs-12 text-center">
-                        <img src="images/product-1.png" alt="">
-                    </div>
-                    <div class="product-content col-md-7 col-xs-12">
-                        <h3>Audio notes generation using RCNN and CycleGAN</h3>	
-                        <span style="font-size: 150%; color:#663399;">Tensorflow, OpenCV and ffmpeg</span>
-                        <br><br><br><br>
-                        </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="col-md-5 col-xs-12 text-center">
-                        <img src="images/product-1.png" alt="">
-                    </div>                    
-                    <div class="product-content col-md-7 col-xs-12">
-                        <h3>Video Compression using AutoEncoder</h3>	
-                        <span style="font-size: 150%; color:#663399;">Tensorflow and OpenCV</span>
-                        <br><br><br><br>
-                        </div>
-                </div>
-                <div class="col-md-6">
-                <div class="col-md-5 col-xs-12 text-center">
-                        <img src="images/product-1.png" alt="">
-                    </div>
-                    <div class="product-content col-md-7 col-xs-12">
-                        <h3>Image super-resolution using RAISR</h3>	
-                        <span style="font-size: 150%; color:#663399;">Numpy and Scipy</span>
-                        <br><br><br><br>
-                        </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="col-md-5 col-xs-12 text-center">
-                        <img src="images/product-1.png" alt="">
-                    </div>                    
-                    <div class="product-content col-md-7 col-xs-12">
-                        <h3>Text Classification using Ensembled Trees</h3>	
-                        <span style="font-size: 150%; color:#663399;">Sklearn and Spacy</span>
-                        <br><br><br><br>
-                        </div>
-                </div>
-                <div class="col-md-6">
-                <div class="col-md-5 col-xs-12 text-center">
-                        <img src="images/product-1.png" alt="">
-                    </div>
-                    <div class="product-content col-md-7 col-xs-12">
-                        <h3>Semantic Analysis using Bidirectional Seq2Seq models</h3>	
-                        <span style="font-size: 150%; color:#663399;">Tensorflow and Numpy</span>
-                        <br><br><br><br>
-                        </div>
-                </div>
-            </div>-->
         </div>
     </div>
     <div id="video" class="video-feature content-section">
