added sane features

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
         </div>
     </div>
-    <div class="content-section" id="products">
+    <div class="content-section" id="products" style="z-index: 99999999;">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 section-header text-center">
