--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div><br><br><br><br>
     <div class="content-section" id="contact">
         <div class="container">
             <div class="row">
